Fix double borders

--- a/css/components/atoms/article.scss
+++ b/css/components/atoms/article.scss
@@ -1,6 +1,6 @@
 .article-item {
-  border-top: $b1;
   border-right: $b1;
+  border-bottom: $b1;
   padding: $s4;
   position: relative;
 
