--- a/css/components/molecules/block.scss
+++ b/css/components/molecules/block.scss
@@ -94,7 +94,7 @@
 }
 
 .link-block {
-  border-top: 2px solid $secondary;
+  border-bottom: 2px solid $secondary;
   border-right: 2px solid $secondary;
   padding: $s3;
   text-transform: uppercase;
